# raspberry-pi-pico-exercises

./: .gitignore
blink/: CMakeLists.txt  blink.c
dc_motor/: CMakeLists.txt  main.cpp
dc_motor/include/: dc_motor.h  encoder.h  pid_controller.h  pins.h  servo.h
servo/: CMakeLists.txt  main.cpp
servo_cpp/: CMakeLists.txt  main.cpp
